<resources>
    <string name="app_name">Include Bucket</string>

    <!-- **** General Activity BUTTONS **** -->
    <string name="accept_button">Accept</string>
    <string name="back_button">Back</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="new_button">New</string>
    <string name="new_request">I Need a Ride!</string>
    <string name="save_button">Save</string>
    <string name="confirm_button">Confrim</string>
    <string name="delete_button">Delete</string>


    <!-- Strings related to login -->
    <string name="user_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="register_button">Register</string>
    <string name="userInfo">Plan on driving? (You can fill this later)</string>

    <!-- Strings related to user -->
    <string name="user_name">Name</string>
    <string name="user_phone">Phone</string>
    <string name="user_email">Email</string>
    <string name="user_username">Username</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_edit_user_data">EditUserDataActivity</string>

    <!-- Strings related to edit -->
    <string name="edit_user_name">Name</string>
    <string name="edit_user_email">Email</string>
    <string name="edit_user_phone">Phone</string>
    <string name="edit_user_save_button">Save</string>

    <!-- String for Vehicle Description -->
    <string name="vehicle_make">Make</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_year">YYYY</string>
    <string name="vehicle_description">Plan on Driving?</string>

    <!-- Activity Titles -->
    <string name="driver_Requests">My Ride Offers</string>
    <string name="rider_Requests">Your Requests</string>
    <string name="open_Requests">Open Requests</string>
    <string name="contact_info">Contact Information</string>
    <string name="edit_info">Edit Your Info</string>
    <string name="login_title">Rider Drive Trying</string>
    <string name="mainmenu_title">What is Your Role?</string>
    <string name="register_title">Register</string>
    <string name="requestTitle">Request Information</string>
    <string name="my_requests">My Requests</string>


</resources>
