<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginTextField"
        android:hint="@string/user_login"
        android:autoText="false"
        android:singleLine="true"
        android:fontFamily="sans-serif-light"
        android:inputType="textNoSuggestions"
        android:textSize="20dp"
        android:paddingTop="15dp"
        android:width="300dp"
        android:layout_above="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton"
        android:layout_alignStart="@+id/loginButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:id="@+id/loginButton"
        android:width="300dp"
        android:fontFamily="sans-serif-light"
        android:textSize="20dp"
        android:layout_above="@+id/registerButton"
        android:layout_alignStart="@+id/registerButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/registerButton"
        android:width="300dp"
        android:fontFamily="sans-serif-light"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTitle"
        android:textSize="35dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/login_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view2"
        android:layout_below="@+id/loginTitle" />

</RelativeLayout>