<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301_17.includebucket.ViewDriverDataActivity"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_login"
        android:id="@+id/loginTextView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:id="@+id/confirmButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTextView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:layout_below="@+id/phoneTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneTextView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:layout_below="@+id/loginTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view"
        android:layout_below="@+id/contactInformation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/view2"
        android:layout_below="@+id/carDetailsTitle" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Make"
        android:id="@+id/MakeView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:paddingTop="15dp"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Model"
        android:id="@+id/ModelView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:layout_below="@+id/MakeView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Year"
        android:id="@+id/YearView"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        android:layout_below="@+id/ModelView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car Details"
        android:id="@+id/carDetailsTitle"
        android:textSize="35dp"
        android:paddingTop="30dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:layout_below="@+id/emailTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactInformation"
        android:textSize="35dp"
        android:hint="Contact Information"
        android:fontFamily="sans-serif-light"
        android:text="@string/contact_info"
        android:textAlignment="center"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>